# zephyr_stm32f1_minimal

./: CMakeLists.txt  README.md  flash.sh  logging.sh  prj.conf  west.yml
boards/: stm32f103c8_board.overlay  stm32f103c8_board_io_master.dtsi  stm32f103c8_board_peripheral.dtsi
boards/arm/com_f103c8/: Kconfig.board  Kconfig.defconfig  com_f103c8.dts  com_f103c8_defconfig
src/: main.c
src/MANAGER/BLINK_MGR/: CMakeLists.txt
src/MANAGER/BLINK_MGR/includes/: blink_manager.h
src/MANAGER/BLINK_MGR/src/: blink_manager.c
src/MANAGER/THREAD_MGR/: CMakeLists.txt
src/MANAGER/THREAD_MGR/includes/: thread_manager.h
src/MANAGER/THREAD_MGR/src/: thread_manager.c
